# n8nv

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  e2e-docker.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  execution.py  integration_credential.py  lifeos.py  user.py  workflow.py
backend/app/schemas/: ai.py  auth.py  execution.py  integration.py  lifeos.py  workflow.py
backend/app/services/: ai_service.py  health_service.py  log_stream.py  workflow_engine.py
backend/app/utils/: oauth_state.py  scheduler.py
backend/app/workers/: tasks.py
config/: channel.yaml
config/prompts/: idea.txt  metadata.txt  script.txt  shorts.txt  thumbnail.txt
database/sample_workflows/: daily_life_os.json  gmail_to_telegram.json
docker/: backend.Dockerfile  backend.prod.Dockerfile  frontend.Dockerfile  frontend.prod.Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useAuthStore.ts
frontend/src/pages/: DashboardPage.tsx  (+1 more)
scripts/: smoke_api.py
src/yt_automation/: cli.py  downloader.py  ffmpeg.py  llm.py  pipeline.py  remix.py  templates.py  utils.py  youtube.py
src/yt_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+16 files in other folders)
